src-tauri/check_push_refactor.txt
cargo :    Compiling fireworks-collaboration v0.1.0 (C:\Users\34404\Documents\G
itHub\fireworks-collaboration\src-tauri)
所在位置 行:1 字符: 1
+ cargo check --lib 2>&1 | Out-File -Encoding UTF8 check_push_refactor. ...
+ ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling fi...tion\src-tauri) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0277]: the trait bound `std::path::Path: GitRunner` is not satisfied
   --> src\soak\runner.rs:332:9
    |
332 |         producer,
    |         ^^^^^^^^ the trait `GitRunner` is not implemented for `std::path:
:Path`
    |
    = help: the trait `GitRunner` is implemented for `CliGitRunner`
    = note: required for the cast from `&std::path::Path` to `&dyn GitRunner`

error[E0277]: the size for values of type `[u8]` cannot be known at compilation
 time
    --> src\soak\runner.rs:332:9
     |
332  |         producer,
     |         ^^^^^^^^ doesn't have a size known at compile-time
     |
     = help: within `std::path::Path`, the trait `Sized` is not implemented for
 `[u8]`
note: required because it appears within the type `std::path::Path`
    --> C:\Users\34404\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rus
tlib/src/rust\library\std\src\path.rs:2143:12
     |
2143 | pub struct Path {
     |            ^^^^
     = note: required for the cast from `&std::path::Path` to `&dyn GitRunner`

error[E0308]: mismatched types
   --> src\soak\runner.rs:334:14
    |
334 |         Some(&refspecs),
    |         ---- ^^^^^^^^^ expected `&str`, found `&Vec<&str>`
    |         |
    |         arguments to this enum variant are incorrect
    |
    = note: expected reference `&str`
               found reference `&Vec<&str>`
help: the type constructed contains `&Vec<&str>` due to the type of the argumen
t passed
   --> src\soak\runner.rs:334:9
    |
334 |         Some(&refspecs),
    |         ^^^^^---------^
    |              |
    |              this argument influences the type of `Some`
note: tuple variant defined here
   --> C:\Users\34404\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rust
lib/src/rust\library\core\src\option.rs:597:5
    |
597 |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^^^

error[E0061]: this function takes 7 arguments but 6 arguments were supplied
   --> src\soak\runner.rs:331:5
    |
331 |     push::do_push(
    |     ^^^^^^^^^^^^^
332 |         producer,
333 |         Some("origin"),
    |         --------------
    |         |
    |         argument #2 of type `&std::path::Path` is missing
    |         expected `&AtomicBool`, found `std::option::Option<&str>`
...
336 |         &cancel_push,
    |         ------------
    |         |
    |         argument #5 of type `std::option::Option<(&str, &str)>` is missin
g
    |         expected `_`, found `&AtomicBool`
337 |         |_| {},
    |         ------ unexpected argument #6 of type `{closure@src\soak\runner.r
s:337:9: 337:12}`
    |
note: function defined here
   --> src\core\git\default_impl\push.rs:7:8
    |
7   | pub fn do_push<F: FnMut(ProgressPayload)>(
    |        ^^^^^^^
8   |     runner: &dyn GitRunner,
9   |     dest: &Path,
    |     -----------
...
12  |     creds: Option<(&str, &str)>,
    |     ---------------------------
help: did you mean
    |
331 -     push::do_push(
332 -         producer,
333 -         Some("origin"),
334 -         Some(&refspecs),
335 -         None,
336 -         &cancel_push,
337 -         |_| {},
338 -     )
331 +     push::do_push(producer, /* &std::path::Path */, Some(&refspecs), None
, /* std::option::Option<(&str, &str)> */, &cancel_push, Some("origin"))
    |

warning: unused variable: `creds`
  --> src\core\git\default_impl\push.rs:12:5
   |
12 |     creds: Option<(&str, &str)>,
   |     ^^^^^ help: if this is intentional, prefix it with an underscore: `_cr
eds`
   |
   = note: `#[warn(unused_variables)]` on by default

Some errors have detailed explanations: E0061, E0277, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `fireworks-collaboration` (lib) generated 1 warning
error: could not compile `fireworks-collaboration` (lib) due to 4 previous erro
rs; 1 warning emitted
